añadiendo iconos a las acciones del boton

--- a/src/app/modules/categoria/pages/categoria-add/categoria-add.component.html
+++ b/src/app/modules/categoria/pages/categoria-add/categoria-add.component.html
@@ -3,7 +3,10 @@
     <div class="table__header">
       <h4>Categoria</h4>
       <button type="button" class="btn btn-primary" (click)="regresar()">
-        regresar
+        <div class="button-content">
+          <i class="uil uil-arrow-left"></i>
+          regresar
+        </div>
       </button>
     </div>
 
