--- a/src/app/modules/categoria/pages/categoria-list/categoria-list.component.scss
+++ b/src/app/modules/categoria/pages/categoria-list/categoria-list.component.scss
@@ -16,3 +16,13 @@
   justify-content: space-between;
   color: white;
 }
+
+.uil {
+  display: inline-block;
+  font-size: 20px;
+}
+
+.button-content {
+  display: flex;
+  align-items: center;
+}
