--- a/src/app/modules/categoria/pages/categoria-list/categoria-list.component.html
+++ b/src/app/modules/categoria/pages/categoria-list/categoria-list.component.html
@@ -3,7 +3,10 @@
     <div class="table__header">
       <h4>Categoria</h4>
       <button type="button" class="btn btn-primary" (click)="agregar()">
-        Agregar
+        <div class="button-content">
+          <i class="uil uil-plus"></i>
+          agregar
+        </div>
       </button>
     </div>
     <div class="table-responsive">
@@ -25,7 +28,7 @@
                 type="button"
                 (click)="editar(data.id)"
               >
-                <!-- <i class="uil uil uil-estate"></i> -->
+                <i class="uil uil-edit-alt"></i>
                 editar
               </button>
               <button
@@ -33,7 +36,7 @@
                 type="button"
                 (click)="borrar(data.id)"
               >
-                <!-- <i class="uil uil uil-estate"></i> -->
+                <i class="uil uil-trash-alt"></i>
                 borrar
               </button>
             </th>
