--- a/src/app/modules/producto/pages/producto-add/producto-add.component.scss
+++ b/src/app/modules/producto/pages/producto-add/producto-add.component.scss
@@ -21,3 +21,13 @@
   padding: 10px 20px;
   border: solid 1px rgb(53, 53, 148);
 }
+
+.uil {
+  display: inline-block;
+  font-size: 20px;
+}
+
+.button-content {
+  display: flex;
+  align-items: center;
+}
